[gd_scene load_steps=23 format=3 uid="uid://lhvaoda5xeij"]

[ext_resource type="Texture2D" uid="uid://dh4n50sf1sx1l" path="res://assets/enemies/boss/boss.png" id="1_3worh"]
[ext_resource type="Script" path="res://Scenes/Boss/boss.gd" id="1_nq1dn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s5a4"]
size = Vector2(10, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2baht"]
size = Vector2(22, 51.5)

[sub_resource type="Animation" id="Animation_far6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossHitBox/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/BossHitBox/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_f62yi"]
resource_name = "arrive"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossHitBox/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/BossHitBox/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.5, 0.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_hit_box"
}]
}

[sub_resource type="Animation" id="Animation_neff0"]
resource_name = "attack"
length = 2.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.6, 0.8, 1, 1.2, 1.7, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(0, 0), Vector2(-50, 0), Vector2(0, 0), Vector2(-200, 0), Vector2(0, -150), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3uque"]
resource_name = "hit"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossHitBox/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.786031, 0, 0.280816, 1), Color(1, 1, 1, 1), Color(0.786031, 0, 0.280816, 1), Color(1, 1, 1, 1), Color(0.786031, 0, 0.280816, 1), Color(1, 1, 1, 1), Color(0.786031, 0, 0.280816, 1), Color(1, 1, 1, 1), Color(0.786031, 0, 0.280816, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_txufk"]
resource_name = "pulse"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2, 1.6, 1.7, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -100), Vector2(0, 0), Vector2(0, 0), Vector2(0, -100), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e75gy"]
_data = {
"RESET": SubResource("Animation_far6x"),
"arrive": SubResource("Animation_f62yi"),
"attack": SubResource("Animation_neff0"),
"hit": SubResource("Animation_3uque"),
"pulse": SubResource("Animation_txufk")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fmog8"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4cgh8"]
animation = &"arrive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fimvo"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q104c"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7lwtm"]
animation = &"pulse"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oso2t"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v68f7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"on_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_orkgo"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f86eh"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rm0vg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ix3o6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gp3je"]
states/RESET/node = SubResource("AnimationNodeAnimation_fmog8")
states/RESET/position = Vector2(353, 100)
states/Start/position = Vector2(232, 100)
states/arrive/node = SubResource("AnimationNodeAnimation_4cgh8")
states/arrive/position = Vector2(463, 100)
states/attack/node = SubResource("AnimationNodeAnimation_fimvo")
states/attack/position = Vector2(679, 100)
states/hit/node = SubResource("AnimationNodeAnimation_q104c")
states/hit/position = Vector2(463, 200.844)
states/pulse/node = SubResource("AnimationNodeAnimation_7lwtm")
states/pulse/position = Vector2(569, 100)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_oso2t"), "RESET", "arrive", SubResource("AnimationNodeStateMachineTransition_v68f7"), "arrive", "pulse", SubResource("AnimationNodeStateMachineTransition_orkgo"), "pulse", "attack", SubResource("AnimationNodeStateMachineTransition_f86eh"), "attack", "pulse", SubResource("AnimationNodeStateMachineTransition_rm0vg"), "hit", "pulse", SubResource("AnimationNodeStateMachineTransition_ix3o6")]
graph_offset = Vector2(-111, 30)

[node name="Boss" type="Node2D"]
script = ExtResource("1_nq1dn")

[node name="BossTrigger" type="Area2D" parent="."]
position = Vector2(-130, -100)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossTrigger"]
shape = SubResource("RectangleShape2D_7s5a4")

[node name="Visual" type="Node2D" parent="."]

[node name="BossHitBox" type="Area2D" parent="Visual"]
collision_layer = 4
collision_mask = 8

[node name="Sprite2D" type="Sprite2D" parent="Visual/BossHitBox"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, -32)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_3worh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual/BossHitBox"]
position = Vector2(-1, -29.25)
shape = SubResource("RectangleShape2D_2baht")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e75gy")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
tree_root = SubResource("AnimationNodeStateMachine_gp3je")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/on_trigger = false

[connection signal="area_entered" from="BossTrigger" to="." method="_on_boss_trigger_area_entered"]
[connection signal="area_entered" from="Visual/BossHitBox" to="." method="_on_boss_hit_box_area_entered"]
